// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spaces tests change space 1`] = `
Array [
  "count",
  "3",
]
`;

exports[`Spaces tests change space 2`] = `
Array [
  "count",
  "41,108,632",
]
`;
